visual changes in lobby page

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 
-	<div class="events-menu-container">
+	<div class="events-menu-container" style="padding-left: 300px; height: 100px;">
 		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.detailsPageSelectedEvents ) }">
 			<div class="border-item inne-border-tab"></div>
 			<div class="menu-item" data-eventkind="7">
