--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
@@ -1,7 +1,7 @@
 ﻿<div id="detailsPageAllEventsListContainer" class="display-events-overview-container">
-	<div class="display-events-overview-header">
+	<header class="display-events-overview-header">
 		<span>Mój kalendarz</span><div class="close-btn-x hover-cursor-pointer" data-bind="click:$root.closeAllSelectedEventsListContainerOnClick">x</div>
-	</div>
+	</header>
 
 	<div style="padding: 10px;">
 		<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.detailsPageSelectedEvents ) }">
