--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -165,13 +165,6 @@ header, footer, nav, section, div {
 	/*background:#b1a798;*/
 }
 
-.events-menu-container {
-	/*text-align: center;*/
-	/*background: rgb(178, 169, 153);*/
-	padding-left: 300px;
-	height: 100px;
-}
-
 #lobbyLogo {
 	background-image: url(../Images/Logo/kkLogo.png);
 	position: absolute !important;
@@ -503,7 +496,7 @@ header, footer, nav, section, div {
 	z-index: 98;
 	border-bottom: 2px solid rgb(228, 222, 202);
 	color: white;
-	background: #E4DECA;
+	background:#D3CCB8;
 }
 
 	.other-month-cell .cell-span-container .cell-month-name-span {
@@ -582,7 +575,7 @@ header, footer, nav, section, div {
 .other-month-cell {
 	position: relative;
 	border: 1px solid white;
-	background: rgb(228, 222, 202);
+	background: rgb(211, 204, 184);
 }
 
 	.other-month-cell .cell-span-container span {
@@ -748,7 +741,7 @@ header, footer, nav, section, div {
 }
 
 #lobbyPageAllEventsListContainer {
-	margin: 20px auto;
+	margin: 1.8%;
 	margin-top: 30px;
 }
 
@@ -1704,10 +1697,8 @@ legend {
 
 /*event block*/
 .event-block-info-container {
-	width: 96%;
 	position: relative;
 	z-index: 1;
-	margin-left: 2%;
 	color: rgb(250, 250, 250);
 	padding-top: 60px;
 	top: -45px;
@@ -1739,7 +1730,7 @@ legend {
 
 .event-block-container {
 	display: inline-block;
-	width: 30%;
+	width: 32%;
 	vertical-align: top;
 	margin: 4px;
 }
@@ -1758,6 +1749,7 @@ legend {
 .event-block-header {
 	width: 50%;
 	padding: 10px;
+	padding-left:0px;
 	margin-bottom: 10px;
 }
 
@@ -1822,7 +1814,7 @@ legend {
 
 .event-block {
 	height: 150px;
-	background: rgba(129, 119, 106, 1);
+	background: rgb(129, 127, 112);
 	color: rgb(192, 180, 153);
 	box-shadow: 2px 2px 10px rgb(166, 158, 146);
 	overflow: hidden;
@@ -1830,7 +1822,7 @@ legend {
 	padding: 10px;
 	text-align: left;
 	z-index: 2;
-	border: 2px solid #D7D0B8;
+	border: 2px solid #E9E5D4;
 }
 
 .today-day-header-calendar {
