--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
@@ -1,9 +1,10 @@
 ﻿<div id="lobbyPageAllEventsListContainer" class="display-events-overview-container">
-
-	<header class="display-events-overview-header">
+<header class="display-events-overview-header">
+	<span>
 		Publiczne wydarzenia
-	</header>
-
+	</span>
+	<div class="close-btn-x hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</div>
+</header>	
 	<div style="padding: 10px;">
 		<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.lobbyPageSelectedEvents ) }">
 			<div class="show-old-events-checkbox"></div>
