--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
@@ -2,79 +2,79 @@
 	<div style="text-align: left;">
 		<div id="addPublicEventBtn" class="add-btn hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }">Stwórz publiczne wydarzenie +</div>
 	</div>
+	<div class="events-menu-container">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+			<div class="border-item inne-border-tab"></div>
+			<div class="menu-item" data-eventkind="7">
+				<span>Inne</span>
+			</div>
+			<div class="menu-item-number-container">
+				<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[7].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[7].upcoming() : '-'"></div>
+			</div>
+		</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-		<div class="border-item inne-border-tab"></div>
-		<div class="menu-item" data-eventkind="7">
-			<span>Inne</span>
-		</div>
-		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[7].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[7].upcoming() : '-'"></div>
-		</div>
-	</div>
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+			<div class="border-item lekcje-border-tab"></div>
+			<div class="menu-item" data-eventkind="2">
+				<span>Lekcje</span>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-		<div class="border-item lekcje-border-tab"></div>
-		<div class="menu-item" data-eventkind="2">
-			<span>Lekcje</span>
-
+			</div>
+			<div class="menu-item-number-container">
+				<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[2].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[2].upcoming() : '-'"></div>
+			</div>
 		</div>
-		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[2].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[2].upcoming() : '-'"></div>
-		</div>
-	</div>
 
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-		<div class="border-item wydarzenia-border-tab"></div>
-		<div class="menu-item" data-eventkind="1">
-			<span>Wydarzenia</span>
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+			<div class="border-item wydarzenia-border-tab"></div>
+			<div class="menu-item" data-eventkind="1">
+				<span>Wydarzenia</span>
+			</div>
+			<div class="menu-item-number-container">
+				<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[1].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[1].upcoming() : '-'"></div>
+			</div>
 		</div>
-		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[1].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[1].upcoming() : '-'"></div>
-		</div>
-	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-		<div class="border-item spotkania-border-tab"></div>
-		<div class="menu-item" data-eventkind="6">
-			<span>Spotkania</span>
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+			<div class="border-item spotkania-border-tab"></div>
+			<div class="menu-item" data-eventkind="6">
+				<span>Spotkania</span>
 
+			</div>
+			<div class="menu-item-number-container">
+				<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[6].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[6].upcoming() : '-'"></div>
+			</div>
 		</div>
-		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[6].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[6].upcoming() : '-'"></div>
-		</div>
-	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-		<div class="border-item zajecia-border-tab"></div>
-		<div class="menu-item" data-eventkind="3">
-			<span>Zajęcia</span>
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+			<div class="border-item zajecia-border-tab"></div>
+			<div class="menu-item" data-eventkind="3">
+				<span>Zajęcia</span>
+			</div>
+			<div class="menu-item-number-container">
+				<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[3].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[3].upcoming() : '-'"></div>
+			</div>
 		</div>
-		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[3].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[3].upcoming() : '-'"></div>
-		</div>
-	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-		<div class="border-item szkolenia-border-tab"></div>
-		<div class="menu-item" data-eventkind="4">
-			<span>Szkolenia</span>
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+			<div class="border-item szkolenia-border-tab"></div>
+			<div class="menu-item" data-eventkind="4">
+				<span>Szkolenia</span>
 
+			</div>
+			<div class="menu-item-number-container">
+				<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[4].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[4].upcoming() : '-'"></div>
+			</div>
 		</div>
-		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[4].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[4].upcoming() : '-'"></div>
-		</div>
-	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-		<div class="border-item kursy-border-tab"></div>
-		<div class="menu-item" data-eventkind="5">
-			<span>Kursy</span>
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+			<div class="border-item kursy-border-tab"></div>
+			<div class="menu-item" data-eventkind="5">
+				<span>Kursy</span>
+			</div>
+			<div class="menu-item-number-container">
+				<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[5].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[5].upcoming() : '-'"></div>
+			</div>
 		</div>
-		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[5].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[5].upcoming() : '-'"></div>
-		</div>
-	</div>
-
+	</div>	
 </div>
