--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -166,11 +166,13 @@ header, footer, nav, section, div {
 }
 
 #lobbyLogo {
-	background-image: url(../Images/Logo/kkLogo.png);
+	background-image: url(../Images/Logo/kkLogo_verysmall.png);
 	position: absolute !important;
 	background-repeat: no-repeat;
-	height: 140px;
-	width: 540px;
+	/*height: 140px;
+	width: 540px;*/
+	height: 41px;
+	width: 179px;
 }
 
 #layoutLogo {
