--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -166,13 +166,11 @@ header, footer, nav, section, div {
 }
 
 #lobbyLogo {
-	background-image: url(../Images/Logo/kkLogo_smaller.png);
+	background-image: url(../Images/Logo/kkLogo.png);
 	position: absolute !important;
 	background-repeat: no-repeat;
-	/*height: 140px;
-	width: 540px;*/
-	height: 82px;
-	width: 356px;
+	height: 140px;
+	width: 540px;
 }
 
 #layoutLogo {
@@ -808,6 +806,11 @@ header, footer, nav, section, div {
 
 .add-event-form-container {
 	margin: 0 auto;
+}
+
+.event-block-user-option {
+	color: rgb(175, 170, 124);
+	font-size:1.2em;
 }
 
 .light-icon {
@@ -1711,12 +1714,7 @@ legend {
 	color: rgb(250, 250, 250);
 	padding-top: 60px;
 	top: -45px;
-}
-
-.event-block-user-options {
-	position: absolute;
-	right: 0;
-	text-align: center;
+	line-height:1;
 }
 
 .event-block-info-body {
@@ -1724,6 +1722,8 @@ legend {
 	background: rgba(200, 194, 172, .8);
 	overflow: hidden;
 	text-align: left;
+	box-shadow:rgb(169, 162, 139) 2px 2px 10px -1px inset;
+	border:2px solid rgb(248, 245, 235);
 }
 
 .details-event-block-info-body {
@@ -1733,15 +1733,15 @@ legend {
 
 .event-block-info-footer {
 	padding: 10px;
-	border-top: 1px solid rgb(250, 250, 250);
-	overflow: hidden;
-	color: gray;
+	text-align:left;
 	background: rgb(248, 245, 235);
+	line-height:2;
 }
 
 .details-event-block-info-footer {
 	margin-bottom: 10px;
 	overflow: hidden;
+	line-height:1.5;
 }
 
 .event-block-container {
@@ -1752,18 +1752,15 @@ legend {
 }
 
 	.event-block-container .name-label {
-		font-size: 1.8em;
-		height: 52px;
+		font-size: 1.4em;
+		height: 40px;
 		line-height: 1;
-		padding-bottom: 4px;
 		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
 	}
 
 	.event-block-container .address-label {
 		color: rgb(192, 187, 172);
-		font-size: 1.2em;
+		font-size:.85em;
 	}
 
 	.event-block-container .hour-label {
@@ -1778,14 +1775,12 @@ legend {
 		text-align: right;
 		color: rgb(192, 187, 172);
 		position: relative;
-		bottom: 6px;
 		font-size: 1.4em;
+		line-height:1;
+		margin-bottom:5px;
 	}
 
 .event-block-header {
-	padding: 10px;
-	padding-left: 0px;
-	padding-bottom: 0px;
 	overflow: hidden;
 }
 
@@ -1800,6 +1795,7 @@ legend {
 	background: rgb(223, 215, 188);
 	border: 1px solid rgb(244, 241, 231);
 	position: relative;
+	line-height:1;
 }
 
 .event-shadow-box {
@@ -1856,6 +1852,7 @@ legend {
 	overflow: hidden;
 	position: relative;
 	padding: 10px;
+	padding-top:8px;
 	text-align: left;
 	z-index: 2;
 	border: 2px solid #E9E5D4;
@@ -1883,7 +1880,6 @@ legend {
 }
 
 .event-block-info-description {
-	line-height: 1;
 	font-size: 1.2em;
 }
 
