--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventInfo.cshtml
@@ -39,7 +39,8 @@
 	<div class="details-event-block-info-footer">
 		<div style="float: right;">
 			<div class="details-event-block-info-addedby">
-				<span>dodane przez:</span><span data-bind="text: ' ' + addedBy"></span>
+				<div><span data-bind="text: addedBy"></span></div>
+				<span data-bind="text: dateAdded.displayFullTime()"></span><span>&nbsp;&nbsp;</span><span data-bind="text: dateAdded.displayFullDate()"></span>
 			</div>
 			<div style="text-align: right;font-size:18px;">
 				<div style="display: inline-block;" class="link details-edit-event-link" data-bind="if: $root.userName.toUpperCase() == addedBy.toUpperCase(), click: function () { $root.editEventDetailsPageOnEditLinkClick( id, startDate.year, startDate.month, startDate.day ) }"><span>edytuj</span></div>
