--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventInfo.cshtml
@@ -45,7 +45,7 @@
 	</div>
 	<div class="event-block-info-footer">
 			<div data-bind="if: addedBy.toUpperCase() != $root.userName.toUpperCase()"><span data-bind="click: function () { $root.addPublicEventToMyCalendarOnClick(id, startDate.year, startDate.month, startDate.day) }" class="hover-cursor-pointer event-block-user-option">dodaj do mojego kalendarza +</span></div>
-			<div><span class="hover-cursor-pointer event-block-user-option">zgłaszam chęć uczestnictwa</span></div>
+			<div style="border: 1px solid #D3C8A8; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px;max-width:250px;"><span class="hover-cursor-pointer event-block-user-option">zgłaszam chęć uczestnictwa</span></div>
 	</div>
 </div>
 
