--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -1070,6 +1070,7 @@ background:rgb(115, 233, 162);
 	overflow: hidden;
 	border-bottom: 1px solid rgb(237, 233, 217);
 	list-style-position: inside;
+	clear:both;
 }
 
 .li-note-container {
