added script in HEAD for IE 10 media queries fix

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
@@ -8,6 +8,23 @@
 	<link rel="icon" href="@Url.Content( "~/Images/Ico/favicon.ico" )"/>
 	@Styles.Render( "~/Content/css" )
 
+	<script type="text/javascript">
+		( function ()
+		{
+			if ( "-ms-user-select" in document.documentElement.style &&
+			( navigator.userAgent.match( /IEMobile/ ) ||
+			navigator.userAgent.match( /ZuneWP7/ ) ||
+			navigator.userAgent.match( /WPDesktop/ ) ) )
+			{
+				var msViewportStyle = document.createElement( "style" );
+				msViewportStyle.appendChild(
+				document.createTextNode( "@-ms-viewport{width:auto!important}" )
+   );
+				document.getElementsByTagName( "head" )[0].appendChild( msViewportStyle );
+			}
+		} )();
+	</script>
+
 </head>
 <body>
 	<header>
