added script in HEAD for IE 10 media queries fix

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
@@ -7,7 +7,8 @@
 
 	<link rel="icon" href="@Url.Content( "~/Images/Ico/favicon.ico" )"/>
 	@Styles.Render( "~/Content/css" )
-
+</head>
+<body>
 	<script type="text/javascript">
 		( function ()
 		{
@@ -17,16 +18,12 @@
 			navigator.userAgent.match( /WPDesktop/ ) ) )
 			{
 				var msViewportStyle = document.createElement( "style" );
-				msViewportStyle.appendChild(
-				document.createTextNode( "@-ms-viewport{width:auto!important}" )
+				msViewportStyle.appendChild( document.createTextNode( "@@-ms-viewport{width:auto!important}" )
    );
 				document.getElementsByTagName( "head" )[0].appendChild( msViewportStyle );
 			}
-		} )();
+		}() );
 	</script>
-
-</head>
-<body>
 	<header>
 	</header>
 
