--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
@@ -3,27 +3,14 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
 	<title>Kalendarz Kariery</title>
 
 	<link rel="icon" href="@Url.Content( "~/Images/Ico/favicon.ico" )"/>
 	@Styles.Render( "~/Content/css" )
 </head>
 <body>
-	<script type="text/javascript">
-		( function ()
-		{
-			if ( "-ms-user-select" in document.documentElement.style &&
-			( navigator.userAgent.match( /IEMobile/ ) ||
-			navigator.userAgent.match( /ZuneWP7/ ) ||
-			navigator.userAgent.match( /WPDesktop/ ) ) )
-			{
-				var msViewportStyle = document.createElement( "style" );
-				msViewportStyle.appendChild( document.createTextNode( "@@-ms-viewport{width:auto!important}" )
-   );
-				document.getElementsByTagName( "head" )[0].appendChild( msViewportStyle );
-			}
-		}() );
-	</script>
 	<header>
 	</header>
 
