--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -55,19 +55,39 @@ MEDIA QUERIES
 
 	#lobbyLogo {
 		background-image: url(../Images/Logo/kkLogo.png);
-		background-size:contain;
+		background-size: contain;
 		position: absolute !important;
 		background-repeat: no-repeat;
-		width: 250px;
-		top:14px;
+		width: 320px;
+		top: 14px;
 	}
 
 	#layoutLogo {
-	background-image: url(../Images/Logo/kkLogo.png);
-		background-size:contain;
+		background-image: url(../Images/Logo/kkLogo.png);
+		background-size: contain;
 		position: absolute !important;
 		background-repeat: no-repeat;
-		width: 250px;
-		top:14px;
+		width: 320px;
+		top: 14px;
+	}
+
+	@media (max-width: 320px) {
+		#lobbyLogo {
+			background-image: url(../Images/Logo/kkLogo.png);
+			background-size: contain;
+			position: absolute !important;
+			background-repeat: no-repeat;
+			width: 250px;
+			top: 14px;
+		}
+
+		#layoutLogo {
+			background-image: url(../Images/Logo/kkLogo.png);
+			background-size: contain;
+			position: absolute !important;
+			background-repeat: no-repeat;
+			width: 250px;
+			top: 14px;
+		}
 	}
 }
