--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -70,24 +70,39 @@ MEDIA QUERIES
 		width: 320px;
 		top: 14px;
 	}
+
+	.login-bar-container {
+		text-align: center;
+		top: 90px;
+	}
+
+	#loginPageContainer {
+		width: 99%;
+		margin-left:0;
+	}
 }
 
 @media (max-width: 320px) {
-		#lobbyLogo {
-			background-image: url(../Images/Logo/kkLogo.png);
-			background-size: contain;
-			position: absolute !important;
-			background-repeat: no-repeat;
-			width: 250px;
-			top: 14px;
-		}
-
-		#layoutLogo {
-			background-image: url(../Images/Logo/kkLogo.png);
-			background-size: contain;
-			position: absolute !important;
-			background-repeat: no-repeat;
-			width: 250px;
-			top: 14px;
-		}
+	#lobbyLogo {
+		background-image: url(../Images/Logo/kkLogo.png);
+		background-size: contain;
+		position: absolute !important;
+		background-repeat: no-repeat;
+		width: 250px;
+		top: 14px;
 	}
+
+	#layoutLogo {
+		background-image: url(../Images/Logo/kkLogo.png);
+		background-size: contain;
+		position: absolute !important;
+		background-repeat: no-repeat;
+		width: 250px;
+		top: 14px;
+	}
+
+	.login-bar-container {
+		text-align: center;
+		top: 80px;
+	}
+}
