--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -82,6 +82,7 @@ header, footer, nav, section, div {
 	font-family: Raleway-Regular;
 	font-size: 2em;
 	color: white;
+	line-height:1;
 	text-align: center;
 	text-shadow: 0px 1px 1px rgb(207, 200, 176);
 }
