--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -82,7 +82,7 @@ header, footer, nav, section, div {
 	font-family: Raleway-Regular;
 	font-size: 2em;
 	color: white;
-	line-height:1;
+	line-height: 1;
 	text-align: center;
 	text-shadow: 0px 1px 1px rgb(207, 200, 176);
 }
@@ -112,7 +112,6 @@ header, footer, nav, section, div {
 	table-layout: fixed;
 	border-spacing: 1px;
 	margin-top: 20px;
-	border-bottom: 2px solid rgb(209, 209, 209);
 }
 
 #calendarBg {
@@ -384,7 +383,7 @@ header, footer, nav, section, div {
 	background: rgb(184, 168, 137);
 	width: 100px;
 	box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;
-	line-height:1.5;
+	line-height: 1.5;
 }
 
 #registerPageContainer {
@@ -444,7 +443,6 @@ header, footer, nav, section, div {
 .weekday {
 	display: table-cell;
 	text-align: center;
-	padding-top: 8px;
 }
 
 
@@ -481,7 +479,7 @@ header, footer, nav, section, div {
 .today-cell .cell-span-container {
 	position: relative;
 	top: 56px;
-	background: rgb(244, 255, 155);
+	background: rgb(232, 255, 215);
 	height: 24px;
 	z-index: 98;
 	border-top: 1px solid white;
@@ -550,13 +548,13 @@ header, footer, nav, section, div {
 }
 
 .today-cell {
-	background: white !important;
-	border: 2px solid rgb(221, 212, 183) !important;
+	background: #EDE9D9 !important;
+	border: 2px solid rgb(199, 192, 174) !important;
 }
 
 	.today-cell .event-rectangle {
-		background: white !important;
 		opacity: 1 !important;
+		font-size: 1.1em;
 	}
 
 .current-month-cell {
@@ -595,25 +593,21 @@ header, footer, nav, section, div {
 }
 
 #leftSideCalendar {
-	border-top: 1px solid rgb(240,240,240);
-	border-bottom: 1px solid rgb(240, 240, 240);
 	/*background-image: url("../Images/BackgroundParts/LeftSidePixelDark.png");
 	background-repeat: repeat-y;*/
 	left: 0px;
 	/*background-position: right;*/
+	border-top: 1px solid #F7F7F7;
 	height: 99% !important;
-	border-right: 1px solid #EFEEEC;
 	background: rgb(237, 233, 217);
 }
 
 #rightSideCalendar {
-	border-top: 1px solid rgb(240, 240, 240);
-	border-bottom: 1px solid rgb(240, 240, 240);
 	/*background-image: url("../Images/BackgroundParts/RightSidePixelDark.png");
 	background-repeat: repeat-y;*/
 	right: 0px;
 	/*background-position: left;*/
-	border-left: 1px solid #EFEEEC;
+	border-top: 1px solid #F7F7F7;
 	height: 99% !important;
 	background: rgb(237, 233, 217);
 }
@@ -661,7 +655,7 @@ header, footer, nav, section, div {
 	height: 5px;
 	color: rgb(133, 123, 100);
 	font-size: 0.9em;
-	width:80px;
+	width: 80px;
 	text-align: center;
 }
 
@@ -770,25 +764,25 @@ header, footer, nav, section, div {
 }
 
 .close-text {
-    font-size: 2em;
-    color: rgb(245, 132, 132);
-    border: 1px solid rgb(197, 191, 172);
-    border-right: none;
-    padding-left: 10px;
-    padding-right: 30px;
-    padding-bottom: 2px;
-    border-radius: 3px;
+	font-size: 2em;
+	color: rgb(245, 132, 132);
+	border: 1px solid rgb(197, 191, 172);
+	border-right: none;
+	padding-left: 10px;
+	padding-right: 30px;
+	padding-bottom: 2px;
+	border-radius: 3px;
 }
 
 .save-text {
-    font-size: 2em;
-    color: rgb(137, 197, 155);
-    border: 1px solid rgb(197, 191, 172);
-    border-left: none;
-    padding-left: 30px;
-    padding-right: 10px;
-    padding-bottom: 2px;
-    border-radius: 3px;
+	font-size: 2em;
+	color: rgb(137, 197, 155);
+	border: 1px solid rgb(197, 191, 172);
+	border-left: none;
+	padding-left: 30px;
+	padding-right: 10px;
+	padding-bottom: 2px;
+	border-radius: 3px;
 }
 
 .add-event-fieldset {
@@ -810,7 +804,7 @@ header, footer, nav, section, div {
 
 .event-block-user-option {
 	color: rgb(175, 170, 124);
-	font-size:1.2em;
+	font-size: 1.2em;
 }
 
 .light-icon {
@@ -854,7 +848,7 @@ background:rgb(115, 233, 162);
 	border-top: 4px solid;
 	height: 23px;
 	color: rgb(102, 102, 102);
-	font-size: 12px;
+	font-size: .9em;
 	line-height: 1;
 	background: none;
 	font-family: Raleway-Regular;
@@ -873,6 +867,7 @@ background:rgb(115, 233, 162);
 	z-index: 2;
 	border-top: 4px solid;
 	height: 40px;
+	font-size: 1.2em;
 	line-height: 1;
 }
 
@@ -975,9 +970,8 @@ background:rgb(115, 233, 162);
 }
 
 .current-weekday {
-	color: rgb(148, 138, 111);
-	border: 1px solid rgb(223,223,223);
-	background: white;
+	color: #918D80;
+	font-size: 2em;
 }
 
 .year-header-container {
@@ -1018,16 +1012,13 @@ background:rgb(115, 233, 162);
 }
 
 .year-name-container {
-	background: white;
 	letter-spacing: 1px;
 	color: rgb(148, 138, 111);
 	display: inline-block;
 	padding-bottom: 4px;
-	padding-top: 5px;
 	padding-left: 14px;
 	padding-right: 30px;
-	font-size: 18px;
-	box-shadow: 0px 5px 20px -5px rgb(151, 151, 151);
+	font-size: 2em;
 	position: relative;
 }
 
@@ -1071,7 +1062,7 @@ background:rgb(115, 233, 162);
 	overflow: hidden;
 	border-bottom: 1px solid rgb(237, 233, 217);
 	list-style-position: inside;
-	clear:both;
+	clear: both;
 }
 
 .li-note-container {
@@ -1367,10 +1358,8 @@ background:rgb(115, 233, 162);
 }
 
 .current-month-name-calendar {
-	color: rgb(148, 138, 111);
-	padding: 10px 10px 5px 10px;
-	background: white;
-	box-shadow: 0px 5px 20px -5px rgb(151, 151, 151);
+	color: #918D80;
+	font-size: 2em;
 }
 
 .calendar-eventSummary-btn {
@@ -1503,7 +1492,7 @@ background:rgb(115, 233, 162);
 		padding-bottom: 5px;
 		text-transform: uppercase;
 		background: rgba(194, 175, 129, 0.4);
-		width:230px;
+		width: 230px;
 	}
 
 	.slick-contact-form legend {
@@ -1711,21 +1700,17 @@ legend {
 
 /*event block*/
 .event-block-info-container {
-	position: relative;
-	z-index: 1;
 	color: rgb(250, 250, 250);
-	padding-top: 60px;
-	top: -45px;
-	line-height:1;
+	line-height: 1;
+	background: rgba(200, 194, 172, .8);
+	box-shadow: rgb(169, 162, 139) 2px 2px 10px -1px inset;
+	border: 2px solid rgb(248, 245, 235);
 }
 
 .event-block-info-body {
 	padding: 10px;
-	background: rgba(200, 194, 172, .8);
 	overflow: hidden;
 	text-align: left;
-	box-shadow:rgb(169, 162, 139) 2px 2px 10px -1px inset;
-	border:2px solid rgb(248, 245, 235);
 }
 
 .details-event-block-info-body {
@@ -1735,15 +1720,16 @@ legend {
 
 .event-block-info-footer {
 	padding: 10px;
-	text-align:left;
+	text-align: left;
 	background: rgb(248, 245, 235);
-	line-height:2;
+	line-height: 2;
+	border-top: 12px solid rgb(246, 255, 213);
 }
 
 .details-event-block-info-footer {
 	margin-bottom: 10px;
 	overflow: hidden;
-	line-height:1.5;
+	line-height: 1.5;
 }
 
 .event-block-container {
@@ -1761,8 +1747,8 @@ legend {
 	}
 
 	.event-block-container .address-label {
-		color: rgb(192, 187, 172);
-		font-size:.85em;
+		font-size: .85em;
+		margin-top:10px;
 	}
 
 	.event-block-container .hour-label {
@@ -1772,22 +1758,23 @@ legend {
 	}
 
 	.event-block-container .hour-date-label-container {
+		max-height: 60%;
 		float: right;
+		padding: 10px;
 		display: inline-block;
 		text-align: right;
-		color: rgb(192, 187, 172);
+		color: rgb(127, 122, 109);
 		position: relative;
 		font-size: 1.4em;
-		line-height:1;
-		margin-bottom:5px;
+		line-height: 1;
+		border: 2px solid #EFECE0;
+		background-color: #F8F5EB;
 	}
 
-.event-block-header {
+.event-block-info-header {
 	overflow: hidden;
-}
-
-.event-block-body {
-	color: #ECE7DF;
+	text-align: left;
+	position: relative;
 }
 
 .details-event-block-container {
@@ -1797,7 +1784,7 @@ legend {
 	background: rgb(223, 215, 188);
 	border: 1px solid rgb(244, 241, 231);
 	position: relative;
-	line-height:1;
+	line-height: 1;
 }
 
 .event-shadow-box {
@@ -1847,30 +1834,28 @@ legend {
 }
 
 .event-block {
-	height: 120px;
+	/*height: 120px;
 	background: rgb(129, 127, 112);
 	color: rgb(192, 180, 153);
 	box-shadow: 2px 2px 10px rgb(166, 158, 146);
 	overflow: hidden;
 	position: relative;
 	padding: 10px;
-	padding-top:8px;
+	padding-top: 8px;
 	text-align: left;
 	z-index: 2;
-	border: 2px solid #E9E5D4;
+	border: 2px solid #E9E5D4;*/
 }
 
 .today-day-header-calendar {
-	box-shadow: 0px 5px 20px -5px rgb(151, 151, 151);
-	color: rgb(148, 138, 111);
+	color: #918D80;
 	display: inline-block;
-	font-size: 18px;
+	font-size: 2em;
 	letter-spacing: 1px;
 	padding-top: 5px;
 	padding-bottom: 4px;
 	padding-right: 14px;
 	padding-left: 14px;
-	background: white;
 }
 
 .event-block-footer {
