--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -66,11 +66,13 @@
 <script src="~/Scripts/Lib/raphael-min.js"></script>
 
 <script src="~/Scripts/Lib/SpinJS/spin.min.js"></script>
+<script src="~/Scripts/Lib/Masonry/masonry-docs.min.js"></script>
 <script src="~/Scripts/KnockoutCustomBindings/KOCustomBindings.js"></script>
 <script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
+
 
 <script src="~/Scripts/JSModels/KKEventModel.js"></script>
 <script src="~/Scripts/JSModels/KKEventModelObservable.js"></script>
@@ -101,6 +103,7 @@
 		var PROGRAM = Program;
 		PROGRAM.initializeJQueryExtentionMethods();
 		PROGRAM.initializeAndStartSpinner();
+		PROGRAM.initializeEventGrid();
 		PROGRAM.initialize(indexViewModel, userName);
 	});
 
