--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
 	<title>Kalendarz Kariery</title>
 
 	<link rel="icon" href="@Url.Content( "~/Images/Ico/favicon.ico" )"/>
