--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -1351,10 +1351,8 @@ background:rgb(115, 233, 162);
 
 #lobbyEventsDisplayListContainer {
 	overflow: hidden;
-	border-top: 2px solid rgb(250, 248, 240);
-	padding-top: 40px;
 	padding-bottom: 40px;
-	border-right: 3px solid rgb(215, 208, 184);
+	background:rgb(116, 112, 104);
 }
 
 .current-month-name-calendar {
@@ -1701,7 +1699,7 @@ legend {
 .event-block {
 	color: rgb(250, 250, 250);
 	line-height: 1;
-	background: rgba(200, 194, 172, .8);
+	background: #D7D0B8;
 	box-shadow: rgb(169, 162, 139) 2px 2px 10px -1px inset;
 	border: 2px solid rgb(248, 245, 235);
 }
@@ -1719,6 +1717,7 @@ legend {
 
 .event-block-info-footer {
 	padding: 10px;
+	padding-bottom:0;
 	text-align: left;
 	background: rgb(248, 245, 235);
 	line-height: 2;
