--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventInfo.cshtml
@@ -48,7 +48,9 @@
 
 	</div>
 	<div class="event-block-info-footer">
-			<div style="margin-bottom:10px; border: 2px solid #E1DECF; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px; max-width: 250px;" data-bind="if: addedBy.toUpperCase() != $root.userName.toUpperCase()"><span data-bind="click: function () { $root.addPublicEventToMyCalendarOnClick(id, startDate.year, startDate.month, startDate.day) }" class="hover-cursor-pointer event-block-user-option">dodaj do mojego kalendarza +</span></div>
+	<div data-bind="if: addedBy.toUpperCase() != $root.userName.toUpperCase()">
+		<div style="margin-bottom: 10px; border: 2px solid #E1DECF; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px; max-width: 250px;"><span data-bind="click: function () { $root.addPublicEventToMyCalendarOnClick( id, startDate.year, startDate.month, startDate.day ) }" class="hover-cursor-pointer event-block-user-option">dodaj do mojego kalendarza +</span></div>
+	</div>	
 			<div style="margin-bottom:10px; border: 2px solid #E1DECF; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px; max-width: 250px;"><span class="hover-cursor-pointer event-block-user-option">zgłaszam chęć uczestnictwa</span></div>
 	</div>
 
