--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -1357,7 +1357,7 @@ background:rgb(115, 233, 162);
 	padding-bottom: 40px;
 	background: rgb(116, 112, 104);
 	position: relative;
-	border-right: 3px solid #929292;
+	border-right: 3px solid #807F7F;
 }
 
 .current-month-name-calendar {
